<resources>
    <string name="app_name">TwoZeroFourEight</string>
    <string name="action_settings">Settings</string>

    <!--  Game  -->
    <string name="dia_gameover">GameOver</string>
    <string name="dia_gameover_msg">您獲得了</string>
    <string name="dia_reset">Reset</string>
    <string name="dia_reset_msg">是否要重新開始遊戲</string>
    <string name="dia_exchange">交換方塊</string>
    <string name="dia_exchange_msg">請輸入位置</string>


    <string name="title_score">SCORE</string>
    <string name="title_best">BEST</string>
    <string name="title_newgame">NEWGAME</string>
    <string name="title_rank">RANK</string>
    <string name="title_try">  Try it-></string>
    <string name="title_star">STAR</string>
    <string name="title_exchange">EXCHANGE</string>

    <!--  Rank  -->
    <string name="show_rank">RANK</string>
    <string name="rank_rank">Rank</string>
    <string name="rank_player">Player</string>
    <string name="rank_score">Score</string>
    <string name="rank_date">Date</string>

    <string name="rank_one">1</string>
    <string name="rank_two">2</string>
    <string name="rank_three">3</string>
    <string name="rank_four">4</string>
    <string name="rank_five">5</string>
</resources>
