<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#e6daca"
    android:padding="10dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">
        <TableRow android:background="#FF8C00"
            android:gravity="center_vertical|center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rank_rank"
                android:id="@+id/rank_rank"
                android:textStyle="bold"
                android:textSize="25sp"
                android:padding="5dp"
                android:gravity="center" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rank_player"
                android:id="@+id/rank_player"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rank_score"
                android:id="@+id/rank_score"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rank_date"
                android:id="@+id/rank_date"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="5dp" />

        </TableRow>

        <TableRow android:background="#FAEBD7"
            android:gravity="center_vertical|center_horizontal"
            android:layout_width="wrap_content">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rank_one"
                android:id="@+id/show_rank1"
                android:textStyle="bold"
                android:textSize="30sp"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/show_player1"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/show_score1"
                android:gravity="center"
                android:padding="5dp" />


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/show_date1"
                android:gravity="center"
                android:padding="5dp" />

        </TableRow>

        <TableRow android:background="#FFFFBB"
            android:gravity="center_vertical|center_horizontal">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rank_two"
                android:id="@+id/show_rank2"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/show_player2"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/show_score2"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/show_date2"
                android:gravity="center"
                android:padding="5dp" />
        </TableRow>

        <TableRow android:background="#FAEBD7"
            android:gravity="center_vertical|center_horizontal">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rank_three"
                android:id="@+id/show_rank3"
                android:textStyle="bold"
                android:textSize="30sp"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/show_player3"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/show_score3"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/show_date3"
                android:gravity="center"
                android:padding="5dp" />
        </TableRow>

        <TableRow android:background="#FFFFBB"
            android:gravity="center_vertical|center_horizontal">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rank_four"
                android:id="@+id/show_rank4"
                android:textStyle="bold"
                android:textSize="30sp"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/show_player4"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/show_score4"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/show_date4"
                android:gravity="center"
                android:padding="5dp" />
        </TableRow>

        <TableRow android:background="#FAEBD7"
            android:gravity="center_vertical|center_horizontal">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rank_five"
                android:id="@+id/show_rank5"
                android:textStyle="bold"
                android:textSize="30sp"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/show_player5"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/show_score5"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/show_date5"
                android:gravity="center"
                android:padding="5dp" />
        </TableRow>
    </TableLayout>
</LinearLayout>
